# LittleBox

./: .env.example  .git-blame-ignore-revs  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 08ff22eacf7f_expert_graph_refactor_split_turn_.py  0b8bb9b326a0_m9_add_turn_number_crisis_locked_.py  0e5f4a1b9c2d_reconcile_finish_reason_comment.py  102b0ce35a1e_m11_daily_reports_add_degraded_and_.py  15f014ed2898_m11_baseline.py  1d8a14cc596f_m4_8_baseline.py  2c30b6405a18_drop_redline_fields_from_audit_records.py  3522d5e7ba69_add_auth_tokens_indexes_token_hash_.py  3a8369c7c148_add_daily_reports_updated_at.py  412aed826359_m8_add_ai_turn_counter_to_sessions.py  4b3f0332e1f4_init.py  5ab72cdbcaa8_initial_schema_12_tables.py  5c162bd29a15_m4_accounts_auth_fields_and_family_.py  84781fbc465a_m6_patch3_session_context_token_count.py  96481d959825_m6_patch3_scheme_r_context_size_needs_.py  9ca13584e3d6_reconcile_comment_to_halfwidth.py  a77f2c1e8b34_m6_messages_status_finish_reason.py  b656c65f93d4_m11_daily_reports_unique_upsert.py  b84ab1bb3942_init.py  c0e2a1ba8009_shrink_child_profile_nickname_to_12.py  e99e8b83deea_m4_8_baseline.py  eb15ea6bc38f_daily_report_split_content_and_add_.py
backend/app/: config.py  db.py  main.py  runtime.py  worker.py
backend/app/api/: auth.py  bind_tokens.py  child_profiles.py  children.py  client_ip.py  dev_chat.py  health.py  me.py
backend/app/artifacts/: graph_audit.mmd  graph_main.mmd
backend/app/audit/: __init__.py  context_schema.py  graph.py  llm.py  prompts.py  worker.py  writers.py
backend/app/auth/: bind.py  deps.py  password.py  redis_client.py  redis_ops.py  tokens.py
backend/app/chat/: compression.py  context.py  context_schema.py  dashscope_chat.py  extractors.py  factory.py  graph.py  history_xml.py  llm.py  locks.py  prompts.py  session_policy.py  sse.py  state.py
backend/app/core/: config.py  db.py  enums.py  history_xml.py  llm.py  llm_extractors.py  llm_topology.py  locks.py  models.py  orm_types.py  redis.py  runtime.py  time.py
backend/app/models/: __init__.py  accounts.py  audit.py  base.py  chat.py  enums.py  parent.py
backend/app/schemas/: __init__.py  accounts.py  audit.py  children.py  sessions.py
backend/app/scripts/: __init__.py  _common.py  create_parent.py  draw_graph.py  reset_parent_password.py
backend/app/services/: age_converter.py  child_deletion.py
backend/app/state/: __init__.py  audit_signals.py
backend/scripts/: export_to_pdf.py  probe_sa_asyncpg_exceptions.py
backend/scripts/cleanup/: m6_patch_cleanup.md  m6_patch_cleanup.sql
backend/scripts/verify/: chatdeepseek_dual_provider_probe.py
backend/tests/: _tables.py  conftest.py  test_age_converter.py  test_auth_deps.py  test_child_bind.py  test_child_deletion.py  test_child_profile_m4_8.py  test_child_profile_service.py  test_children_create.py  test_children_delete.py  test_children_list.py  test_config.py  test_conftest_smoke.py  test_dashscope_chat.py  test_e2e_auth.py  test_graph_stream.py  test_llm_smoke.py  test_login_api.py  test_me_profile.py  test_me_sessions.py  test_models.py  test_password.py  test_redis_ops.py  test_runtime.py  test_schemas.py  test_scripts.py  test_sensitivity_config.py  test_sse_endpoint.py  test_tokens.py
(+312 files in other folders)
