[project]
name = "littlebox-backend"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis[hiredis]",
    "pydantic-settings",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-deepseek>=0.1",
    "openai>=1.30.0",
    "argon2-cffi>=23.1.0",
    "regex",
    "arq>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "basedpyright",
    "fakeredis>=2.20.0",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "live: needs real LLM API",
    "audit: audit pipeline tests",
    "integration: needs real DB/Redis/arq worker",
]

[tool.ruff]
line-length = 100
include = ["app"]
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
per-file-ignores = {"alembic/*" = ["E501", "I001"]}

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["app"]
exclude = ["alembic", "tests"]
