[project]
name = "littlebox-backend"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis[hiredis]",
    "pydantic-settings",
    "langchain",
    "langgraph",
    "langchain-openai",
    "langchain-deepseek",
    "openai",
    "argon2-cffi",
    "regex",
    "arq",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "basedpyright",
    "fakeredis",
    "respx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "live: needs real LLM API",
    "audit: audit pipeline tests",
    "integration: needs real DB/Redis/arq worker",
]

[tool.ruff]
line-length = 100
src = ["app"]
exclude = ["alembic",".venv","tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
per-file-ignores = {"alembic/*" = ["E501", "I001"]}

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["app"]
exclude = ["alembic", "tests"]
